--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -1,15 +1,19 @@
 <div class="row">
   <div class="col-md-6">
-    <h2><i class="fa fa-users"></i>Clients</h2>
+    <h2><i class="fa fa-user mr-2"></i>Clients</h2>
   </div>
   <div class="col-md-6"></div>
+</div>
+<div class="row mt-2 mb-2">
+  <div class="col-md-8">
+    <app-filter></app-filter>
+  </div>
 </div>
 <table *ngIf="clients?.length > 0; else noClients" class="table table-striped">
   <thead class="thead-inverse">
     <tr>
       <th>Name</th>
       <th>Email</th>
-      <th>Text</th>
       <th>Tour</th>
       <th>Date</th>
       <th></th>
@@ -19,7 +23,6 @@
     <tr *ngFor="let client of clients">
       <td>{{ client.name }}</td>
       <td>{{ client.email }}</td>
-      <td>{{ client.text }}</td>
       <td>{{ client.tour }}</td>
       <td>-</td>
       <td>
